# watch-remote

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
art/: README.md  icon-fixup.txt  icon.txt
art/palettes/: amber.txt  blue.txt  purple.txt
scripts/: icons.sh  ios-device.sh
src/: App.tsx  app.css  firebase.ts  main.tsx
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  roku.rs
src/api/: errorReporter.test.ts  errorReporter.ts  ipc.ts  rokuIcons.ts  watchApi.ts
src/components/: Background.tsx  CastConfirmModal.tsx  CoverFlow.tsx  DeviceBar.tsx  DeviceSwitcher.tsx  ErrorBoundary.tsx  FavoritesView.tsx  Library.tsx  LibraryView.tsx  Login.tsx  MediaBrowse.tsx  NowPlaying.tsx  PinnedShortcuts.tsx  Remote.tsx  RemoteIcons.tsx  RemoteTab.tsx  ServicesModal.tsx  SettingsModal.tsx  ShortcutIcons.tsx  ShortcutTile.tsx  ShortcutsView.tsx  TextEntry.tsx  TrailerModal.tsx  WatchSearch.tsx  WatchTracker.tsx  WatchView.tsx
src/hooks/: useOrientation.ts
src/stores/: authStore.ts  backgroundStore.ts  castStore.ts  castTitleStore.ts  configStore.ts  deviceStore.ts  navStore.ts  prefsStore.ts  servicesStore.ts  trailerStore.ts  watchStore.ts
src/types/: watch.ts
src/utils/: haptics.ts  image.ts  platform.ts  roku.test.ts  roku.ts
