[package]
name = "rimokon-miru"
version = "0.23.1"
description = "Rimokon Miru — /watch tracker + Roku remote"
authors = ["Andrew Brainerd"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "rimokon_miru_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "2"
roxmltree = "0.20"
urlencoding = "2"
base64 = "0.22"
tauri-plugin-haptics = "2.3.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
